# bench-manager

./: .editorconfig  .env.example  .gitignore  README.md  bench-manager.spec  config.py  main.py  pyproject.toml  requirements.txt  run.sh  tray.py
.github/workflows/: release.yml
core/: bench.py  logs.py  sites.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: BenchCard.vue  BenchStatusBadge.vue  CommandRunner.vue  JobOutput.vue  LogViewer.vue  SiteList.vue
frontend/src/pages/: BenchDetail.vue  Dashboard.vue
frontend/src/router/: index.js
routers/: benches.py  logs.py  sites.py
