[project]
name = "bench-manager"
version = "1.0.0"
description = "Frappe Bench Manager API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "aiofiles>=23.0.0",
    "pydantic-settings>=2.0.0",
    "sse-starlette>=1.6.0",
]

[project.scripts]
bench-manager = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
